KUB 23/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: ingress.a6164.task23.rbr-kubernetes.com
    http:
      paths:
      - backend:
          service:
            name: svc-internal
            port:
               number: 80
        path: /
        pathType: Prefix
